# rust-numpy-financial

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  fv.rs  ipmt.rs  irr.rs  lib.rs  main.rs  mirr.rs  nper.rs  npv.rs  pmt.rs  ppmt.rs  pv.rs  rate.rs  util.rs
