[package]
name = "rfinancial"
version = "0.1.5"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "README.md"]
homepage = "https://github.com/seanzian2093/rust-numpy-financial"
description = "A financial crate mimicking `numpy_financial` in Python"
repository = "https://github.com/seanzian2093/rust-numpy-financial"
keywords = ["finance", "mathematics", "investment"]
categories = ["finance", "mathematics"]
license = "MIT"

[dependencies]

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"